-adding schedule_compare which shows the entire schedule for a day vs reality on the ground

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@
 #  password: sheandhim 
 #  database: muni
 
-development:
+production:
   adapter: postgresql
   database: gtfs_muni
   username: ubuntu
